Reminder: Grpc middleware are not working. It need to be consider using middleware in gateway level and pass metadata in server . SEOND COmmit
